VAR = MED
AM_CXXFLAGS = -std=c++11 -O3 -Wno-unused-function -Wno-unused-variable -DGLIBCXX_DEBUG -D$(VAR) -DHOMEDIR=\"$(abs_top_builddir)/\"
AM_LDFLAGS = -lm

bin_PROGRAMS = ParasoR


ParasoR_SOURCES = matrix.hh matrix.cc num_operator.hh num_operator.cc convert.hh convert.cc plot_struct.hh plot_struct.cc douter_concat.hh centroid.hh sequence.hh param.hh param.cc part_func.hh part_func.cc part_func_delta.cc part_func_mut.cc part_func_prof.cc main.cc
